# TestNG

./: .gitignore  1.txt  CMakeLists.txt  build.sh
app/: CMakeLists.txt  main.cpp
app/include/: Algorithm.h  ArrayTransformer.h  IntersectArray.h  PrintArray.h  TemplatesFunction.h  UniqueReversedArray.h
app/src/: ArrayTransformer.cpp  ArrayTransformer.h  CMakeLists.txt  IntersectArray.cpp  IntersectArray.h  PrintArray.cpp  PrintArray.h  SortArray.cpp  SortArray.h  UniqueReversedArray.cpp  UniqueReversedArray.h
tests/: CMakeLists.txt  build.sh  test.cpp
